--- a/Import_and_Prepare_Data.Rmd
+++ b/Import_and_Prepare_Data.Rmd
@@ -134,6 +134,7 @@ lumBHER2data <- matrix_temp[,colnames(matrix_temp) %in% c("ENSEMBL_GeneID", lumB
 HER2Basaldata <- matrix_temp[,colnames(matrix_temp) %in% c("ENSEMBL_GeneID", HER2sub$patients, Basalsub$patients)]
 BasalNormaldata <- matrix_temp[,colnames(matrix_temp) %in% c("ENSEMBL_GeneID", Basalsub$patients, Normalsub$patients)]
 HER2Normaldata <- matrix_temp[,colnames(matrix_temp) %in% c("ENSEMBL_GeneID", HER2sub$patients, Normalsub$patients)]
+save(lumAlumBdata, lumABasaldata, lumAHER2data, lumANormaldata, lumBBasaldata, lumBNormaldata, lumBHER2data, HER2Basaldata, BasalNormaldata, HER2Normaldata, file="subtypedata.Rdata")
 dds1CPE <- DESeqDataSetFromMatrix(countData = as.matrix(matrix_temp), colData = datasubtypes_my, design = ~ CPE)
 dds1CPE <- estimateSizeFactors(dds1CPE)
 normalized_counts1CPE <- counts(dds1CPE, normalized=TRUE)
@@ -141,152 +142,5 @@ yCPE <- as.data.frame(log2(normalized_counts1CPE+1.0))
 save(yCPE, datasubtypes_my, file="~/Documents/project/normalisedALLandDATASUBTYPES_MY.Rdata")
 
 ```
-
-load the pairwise median data (from pairwisemedian.R) and filter out the genes for which their median is 0:
-```{r}
-load("~/Documents/project/parwisemediandata.Rdata")
-
-keeplumAlumBdata <- medianlumAlumBdata >0
-lumAlumBdata <- lumAlumBdata[keeplumAlumBdata,]
-
-keeplumAHER2data <- medianlumAHER2data >0
-lumAHER2data <- lumAHER2data[keeplumAHER2data,]
-
-keeplumABasaldata <- medianlumABasaldata >0
-lumABasaldata <- lumABasaldata[keeplumABasaldata,]
-
-keeplumANormaldata <- medianlumANormaldata >0
-lumANormaldata <- lumANormaldata[keeplumANormaldata,]
-
-keeplumBNormaldata <- medianlumBNormaldata >0
-lumBNormaldata <- lumBNormaldata[keeplumBNormaldata,]
-
-keeplumBHER2data <- medianlumBHER2data >0
-lumBHER2data <- lumBHER2data[keeplumBHER2data,]
-
-keeplumBBasaldata <- medianlumBBasaldata >0
-lumBBasaldata <- lumBBasaldata[keeplumBBasaldata,]
-
-keepHER2Basaldata <- medianHER2Basaldata >0
-HER2Basaldata <- HER2Basaldata[keepHER2Basaldata,]
-
-keepHER2Normaldata <- medianHER2Normaldata >0
-HER2Normaldata <- HER2Normaldata[keepHER2Normaldata,]
-
-keepBasalNormaldata <- medianBasalNormaldata >0
-BasalNormaldata <- BasalNormaldata[keepBasalNormaldata,]
-```
-
-Construct the model matrices for each pair of subtypes for later linear regression analysis and encode the subtypes as dummy variables 0 and 1:
-```{r}
-model_lumAlumB <-datasubtypes_my[match(c(lumAsub$patients, lumBsub$patients), rownames(datasubtypes_my)),]
-model_lumABasal <-datasubtypes_my[match(c(lumAsub$patients, Basalsub$patients), rownames(datasubtypes_my)),]
-model_lumAHER2 <-datasubtypes_my[match(c(lumAsub$patients, HER2sub$patients), rownames(datasubtypes_my)),]
-model_lumANormal <-datasubtypes_my[match(c(lumAsub$patients, Normalsub$patients), rownames(datasubtypes_my)),]
-model_lumBBasal <-datasubtypes_my[match(c(lumBsub$patients, Basalsub$patients), rownames(datasubtypes_my)),]
-model_lumBNormal <-datasubtypes_my[match(c(lumBsub$patients, Normalsub$patients), rownames(datasubtypes_my)),]
-model_lumBHER2 <-datasubtypes_my[match(c(lumBsub$patients, HER2sub$patients), rownames(datasubtypes_my)),]
-model_HER2Basal <-datasubtypes_my[match(c(HER2sub$patients, Basalsub$patients), rownames(datasubtypes_my)),]
-model_HER2Normal <-datasubtypes_my[match(c(HER2sub$patients, Normalsub$patients), rownames(datasubtypes_my)),]
-model_BasalNormal <-datasubtypes_my[match(c(Basalsub$patients, Normalsub$patients), rownames(datasubtypes_my)),]
-
-
-g_lumAlumB <- c(rep(0, length(lumAsub$samples)), rep(1, length(lumBsub$samples)))
-model_lumAlumB$subtype <- as.character(g_lumAlumB)
-g_lumABasal <- c(rep(0, length(lumAsub$samples)), rep(1, length(Basalsub$samples)))
-model_lumABasal$subtype <- as.character(g_lumABasal)
-g_lumAHER2 <- c(rep(0, length(lumAsub$samples)), rep(1, length(HER2sub$samples)))
-model_lumAHER2$subtype <- as.character(g_lumAHER2)
-g_lumANormal <- c(rep(0, length(lumAsub$samples)), rep(1, length(Normalsub$samples)))
-model_lumANormal$subtype <- as.character(g_lumANormal)
-g_lumBBasal <- c(rep(0, length(lumBsub$samples)), rep(1, length(Basalsub$samples)))
-model_lumBBasal$subtype <- as.character(g_lumBBasal)
-g_lumBNormal <- c(rep(0, length(lumBsub$samples)), rep(1, length(Normalsub$samples)))
-model_lumBNormal$subtype <- as.character(g_lumBNormal)
-g_lumBHER2 <- c(rep(0, length(lumBsub$samples)), rep(1, length(HER2sub$samples)))
-model_lumBHER2$subtype <- as.character(g_lumBHER2)
-g_HER2Basal <- c(rep(0, length(HER2sub$samples)), rep(1, length(Basalsub$samples)))
-model_HER2Basal$subtype <- as.character(g_HER2Basal)
-g_HER2Normal <- c(rep(0, length(HER2sub$samples)), rep(1, length(Normalsub$samples)))
-model_HER2Normal$subtype <- as.character(g_HER2Normal)
-g_BasalNormal <- c(rep(0, length(Basalsub$samples)), rep(1, length(Normalsub$samples)))
-model_BasalNormal$subtype <- as.character(g_BasalNormal)
-
-
-model_lumAlumB$subtypeOP <- ifelse(model_lumAlumB$subtype == "0", "1", 0)
-model_lumABasal$subtypeOP <- ifelse(model_lumABasal$subtype == "0", "1", 0)
-model_lumAHER2$subtypeOP <- ifelse(model_lumAHER2$subtype == "0", "1", 0)
-model_lumANormal$subtypeOP <- ifelse(model_lumANormal$subtype == "0", "1", 0)
-model_lumBBasal$subtypeOP <- ifelse(model_lumBBasal$subtype == "0", "1", 0)
-model_lumBNormal$subtypeOP <- ifelse(model_lumBNormal$subtype == "0", "1", 0)
-model_lumBHER2$subtypeOP <- ifelse(model_lumBHER2$subtype == "0", "1", 0)
-model_HER2Basal$subtypeOP <- ifelse(model_HER2Basal$subtype == "0", "1", 0)
-model_HER2Normal$subtypeOP <- ifelse(model_HER2Normal$subtype == "0", "1", 0)
-model_BasalNormal$subtypeOP <- ifelse(model_BasalNormal$subtype == "0", "1", 0)
-```
-
-Normalisation using DESeq2 median of ratios approach of each of the subtype pair dataframes:
-```{r}
-matrix_temp_2_lumAHER2 <- lumAHER2data
-matrix_temp_2_lumABasal <- lumABasaldata
-matrix_temp_2_lumAlumB <- lumAlumBdata
-matrix_temp_2_lumANormal <- lumANormaldata
-matrix_temp_2_lumBHER2 <- lumBHER2data
-matrix_temp_2_lumBBasal <- lumBBasaldata
-matrix_temp_2_lumBNormal <- lumBNormaldata
-matrix_temp_2_HER2Basal <- HER2Basaldata
-matrix_temp_2_HER2Normal <- HER2Normaldata
-matrix_temp_2_BasalNormal <- BasalNormaldata
-
-matrix_temp_2_lumAlumB1 <- matrix_temp_2_lumAlumB[,colnames(matrix_temp_2_lumAlumB) %in% rownames(model_lumAlumB)]
-matrix_temp_2_lumABasal1 <- matrix_temp_2_lumABasal[,colnames(matrix_temp_2_lumABasal) %in% rownames(model_lumABasal)]
-matrix_temp_2_lumAHER21 <- matrix_temp_2_lumAHER2[,colnames(matrix_temp_2_lumAHER2) %in% rownames(model_lumAHER2)]
-matrix_temp_2_lumANormal1 <- matrix_temp_2_lumANormal[,colnames(matrix_temp_2_lumANormal) %in% rownames(model_lumANormal)]
-matrix_temp_2_lumBBasal1 <- matrix_temp_2_lumBBasal[,colnames(matrix_temp_2_lumBBasal) %in% rownames(model_lumBBasal)]
-matrix_temp_2_lumBNormal1 <- matrix_temp_2_lumBNormal[,colnames(matrix_temp_2_lumBNormal) %in% rownames(model_lumBNormal)]
-matrix_temp_2_lumBHER21 <- matrix_temp_2_lumBHER2[,colnames(matrix_temp_2_lumBHER2) %in% rownames(model_lumBHER2)]
-matrix_temp_2_HER2Basal1 <- matrix_temp_2_HER2Basal[,colnames(matrix_temp_2_HER2Basal) %in% rownames(model_HER2Basal)]
-matrix_temp_2_HER2Normal1 <- matrix_temp_2_HER2Normal[,colnames(matrix_temp_2_HER2Normal) %in% rownames(model_HER2Normal)]
-matrix_temp_2_BasalNormal1 <- matrix_temp_2_BasalNormal[,colnames(matrix_temp_2_BasalNormal) %in% rownames(model_BasalNormal)]
-
-matrix_temp_2_lumAlumB1 <- matrix_temp_2_lumAlumB1[,rownames(model_lumAlumB)]
-matrix_temp_2_lumABasal1 <- matrix_temp_2_lumABasal1[,rownames(model_lumABasal)]
-matrix_temp_2_lumAHER21 <- matrix_temp_2_lumAHER21[,rownames(model_lumAHER2)]
-matrix_temp_2_lumANormal1 <- matrix_temp_2_lumANormal1[,rownames(model_lumANormal)]
-matrix_temp_2_lumBBasal1 <- matrix_temp_2_lumBBasal1[,rownames(model_lumBBasal)]
-matrix_temp_2_lumBNormal1 <- matrix_temp_2_lumBNormal1[,rownames(model_lumBNormal)]
-matrix_temp_2_lumBHER21 <- matrix_temp_2_lumBHER21[,rownames(model_lumBHER2)]
-matrix_temp_2_HER2Basal1 <- matrix_temp_2_HER2Basal1[,rownames(model_HER2Basal)]
-matrix_temp_2_HER2Normal1 <- matrix_temp_2_HER2Normal1[,rownames(model_HER2Normal)]
-matrix_temp_2_BasalNormal1 <- matrix_temp_2_BasalNormal1[,rownames(model_BasalNormal)]
-all.equal(colnames(matrix_temp_2_BasalNormal1),rownames(model_BasalNormal) )
-
-save(matrix_temp_2_lumAHER21, matrix_temp_2_lumABasal1,matrix_temp_2_lumAlumB1, matrix_temp_2_lumANormal1, matrix_temp_2_lumBHER21, matrix_temp_2_lumBBasal1, matrix_temp_2_lumBNormal1, matrix_temp_2_HER2Basal1, matrix_temp_2_HER2Normal1, matrix_temp_2_BasalNormal1, file="~/Documents/project/unnormaliseddata.Rdata")
-
-normalisation<-function(dataframe, model){
-  model$subtype <- factor(model$subtype)
-  dds1 <- DESeqDataSetFromMatrix(countData = as.matrix(dataframe), colData = model, design = ~ subtype*CPE)
-dds1 <- estimateSizeFactors(dds1)
-normalized_counts1 <- counts(dds1, normalized=TRUE)
-y <- log2(normalized_counts1+1.0)
-return(y)
-}
-
-dataHER2Normal <- normalisation(matrix_temp_2_HER2Normal1, model_HER2Normal)
-dataBasalNormal <- normalisation(matrix_temp_2_BasalNormal1, model_BasalNormal)
-dataHER2Basal <- normalisation(matrix_temp_2_HER2Basal1, model_HER2Basal)
-datalumBHER2 <- normalisation(matrix_temp_2_lumBHER21, model_lumBHER2)
-datalumBNormal <- normalisation(matrix_temp_2_lumBNormal1, model_lumBNormal)
-datalumBBasal <- normalisation(matrix_temp_2_lumBBasal1, model_lumBBasal)
-datalumAlumB <- normalisation(matrix_temp_2_lumAlumB1, model_lumAlumB)
-datalumANormal <- normalisation(matrix_temp_2_lumANormal1, model_lumANormal)
-datalumAHER2 <- normalisation(matrix_temp_2_lumAHER21, model_lumAHER2)
-datalumABasal <- normalisation(matrix_temp_2_lumABasal1, model_lumABasal)
-
-save(dataHER2Normal,datalumABasal, datalumAHER2, datalumANormal,datalumAlumB,datalumBBasal, datalumBNormal, datalumBHER2,dataHER2Basal, dataBasalNormal,  file="~/Documents/project/normaliseddata.Rdata")
-
-save(model_HER2Normal, model_BasalNormal, model_HER2Basal, model_lumBHER2, model_lumBNormal, model_lumBBasal, model_lumAlumB, model_lumANormal, model_lumAHER2, model_lumABasal, file="~/Documents/project/modelmatrices.Rdata")
-```
-
 
 
